--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,5 @@
 <html>
-	<head>Error-Crypto Splash</head>
+	<head>Error-Axovel-portal</head>
 	<body>
 		<h1><%= message %></h1>
 		<h2><%= error.status %></h2>
